samples/_failures_safe/1761464412_08f19e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aedfb893.c: In function ‘main’:
./samples/SAFE/__tmp_aedfb893.c:156:5: error: expected expression at end of input
  156 |     if (unique_count == 0)
      |     ^~
./samples/SAFE/__tmp_aedfb893.c:156:5: error: expected declaration or statement at end of input
